[package]
name = "arpsniffer"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "0.9"
chrono="0.4"
axum = "0.7"
hyper = "1.1"
tokio={ version = "1", features = ["full"]}
warp="0.3"
dashmap="5"
serde={version="1.0", features=["derive"]}
serde_json="1.0"
clap = { version="4.0", features=["derive"]}